--- a/src/web/templates/invoice_users.html
+++ b/src/web/templates/invoice_users.html
@@ -3,13 +3,14 @@
 <h1>Rechnungskarten</h1>
 {% if error %}<p style="color:red;">{{ error }}</p>{% endif %}
 <table>
-<tr><th>Firma</th><th>UID</th><th>Guthaben</th><th>Aktiv</th><th colspan="3">Aktion</th></tr>
+<tr><th>Firma</th><th>UID</th><th>Guthaben</th><th>Aktiv</th><th>Zahlungsmethoden</th><th colspan="3">Aktion</th></tr>
 {% for u in users %}
 <tr>
 <td>{{ u['name'] }}</td>
 <td>{{ u['rfid_uid'] }}</td>
 <td>{{ (u['balance']/100)|round(2) }} €</td>
 <td>{{ 'ja' if u['active'] else 'nein' }}</td>
+<td>{{ 'ja' if u['show_on_payment'] else 'nein' }}</td>
 <td><a href="{{ url_for('invoice_user_print', user_id=u['id']) }}" target="_blank">Druck</a></td>
 <td><a href="{{ url_for('user_edit', user_id=u['id']) }}">Bearbeiten</a></td>
 <td><a href="{{ url_for('invoice_user_delete', user_id=u['id']) }}" onclick="return confirm('Benutzer wirklich löschen?');">Löschen</a></td>
@@ -20,6 +21,7 @@
 <form method="post" action="{{ url_for('invoice_user_add') }}">
     <input type="text" name="name" placeholder="Firmenname">
     <input type="text" name="uid" id="uid_new" placeholder="UID">
+    <label><input type="checkbox" name="show_on_payment" value="1"> Auf Zahlungsmethoden anzeigen</label>
     <button type="button" onclick="readUid('uid_new')">UID lesen</button>
     <button type="submit">Hinzufügen</button>
 </form>
