--- a/src/web/templates/user_edit.html
+++ b/src/web/templates/user_edit.html
@@ -7,6 +7,9 @@
     <button type="button" onclick="readUid('uid_edit')">UID lesen</button><br>
       <label>Guthaben in Euro:<br><input type="number" step="0.01" name="balance" value="{{ (user['balance']/100)|round(2) }}"></label><br>
         <label><input type="checkbox" name="is_invoice" value="1" {% if user['is_invoice'] %}checked{% endif %}> Rechnungskarte</label><br>
+        {% if user['is_invoice'] %}
+        <label><input type="checkbox" name="show_on_payment" value="1" {% if user['show_on_payment'] %}checked{% endif %}> Auf Zahlungsmethoden anzeigen</label><br>
+        {% endif %}
       <label><input type="checkbox" name="active" value="1" {% if user['active'] %}checked{% endif %}> Aktiv</label><br>
       <button type="submit">Speichern</button>
   </form>
