feat: rotate database backups

--- a/src/web/templates/event_print.html
+++ b/src/web/templates/event_print.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% block content %}
-<h1>Rechnung für {{ user['name'] }}</h1>
+<h1>Veranstaltung für {{ user['name'] }}</h1>
 <table>
 <tr><th>Zeit</th><th>Artikel</th><th>Menge</th><th>Preis</th><th>Summe</th></tr>
 {% for i in items %}
