--- a/src/web/templates/event_cards.html
+++ b/src/web/templates/event_cards.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% block content %}
-<h1>Rechnungskarten</h1>
+<h1>Veranstaltungskarten</h1>
 {% if error %}<p style="color:red;">{{ error }}</p>{% endif %}
 <table>
 <tr><th>Firma</th><th>UID</th><th>Guthaben</th><th>Aktiv</th><th>Zahlungsmethoden</th><th colspan="3">Aktion</th></tr>
@@ -11,14 +11,14 @@
 <td>{{ (u['balance']/100)|round(2) }} €</td>
 <td>{{ 'ja' if u['active'] else 'nein' }}</td>
 <td>{{ 'ja' if u['show_on_payment'] else 'nein' }}</td>
-<td><a href="{{ url_for('invoice_user_print', user_id=u['id']) }}" target="_blank">Druck</a></td>
+<td><a href="{{ url_for('event_card_print', user_id=u['id']) }}" target="_blank">Druck</a></td>
 <td><a href="{{ url_for('user_edit', user_id=u['id']) }}">Bearbeiten</a></td>
-<td><a href="{{ url_for('invoice_user_delete', user_id=u['id']) }}" onclick="return confirm('Benutzer wirklich löschen?');">Löschen</a></td>
+<td><a href="{{ url_for('event_card_delete', user_id=u['id']) }}" onclick="return confirm('Benutzer wirklich löschen?');">Löschen</a></td>
 </tr>
 {% endfor %}
 </table>
 <h2>Neu</h2>
-<form method="post" action="{{ url_for('invoice_user_add') }}">
+<form method="post" action="{{ url_for('event_card_add') }}">
     <input type="text" name="name" placeholder="Firmenname">
     <input type="text" name="uid" id="uid_new" placeholder="UID">
     <label><input type="checkbox" name="show_on_payment" value="1"> Auf Zahlungsmethoden anzeigen</label>
