Add anonymized transactions export

--- a/src/web/templates/base.html
+++ b/src/web/templates/base.html
@@ -62,6 +62,7 @@
             <ul class="submenu">
                 <li><a href="{{ url_for('log') }}">Verkäufe</a></li>
                 <li><a href="{{ url_for('export_transactions') }}">CSV Verkäufe</a></li>
+                <li><a href="{{ url_for('export_transactions_anonymized') }}">CSV Verkäufe anonymisiert</a></li>
                 <li><a href="{{ url_for('file_logs') }}">Programmlogs</a></li>
             </ul>
         </li>
