Expose Telegram settings and bot

--- a/src/web/templates/base.html
+++ b/src/web/templates/base.html
@@ -67,6 +67,7 @@
             </ul>
         </li>
         <li><a href="{{ url_for('settings') }}">Einstellungen</a></li>
+        <li><a href="{{ url_for('telegram') }}">Telegram</a></li>
         <li><a href="{{ url_for('change_password') }}">Passwort</a></li>
         <li><a href="{{ url_for('logout') }}">Logout</a></li>
     </ul>
